name:                pdf-toolbox-content
version:             0.1.0.0
synopsis:            A collection of tools for processing PDF files
license:             BSD3
license-file:        LICENSE
author:              Yuras Shumovich
maintainer:          Yuras Shumovich <shumovichy@gmail.com>
copyright:           Copyright (c) Yuras Shumovich 2013-2014
category:            PDF
build-type:          Simple
cabal-version:       >=1.8
homepage:            https://github.com/Yuras/pdf-toolbox
extra-source-files:  changelog.md
description:
  Tools for processing PDF content streams

source-repository head
  type:                git
  location:            git://github.com/Yuras/pdf-toolbox.git

library
  hs-source-dirs:      lib
                       compat
  exposed-modules:
                       Pdf.Toolbox.Content
                       Pdf.Toolbox.Content.Parser
                       Pdf.Toolbox.Content.Ops
                       Pdf.Toolbox.Content.Processor
                       Pdf.Toolbox.Content.Transform
                       Pdf.Toolbox.Content.UnicodeCMap
                       Pdf.Toolbox.Content.FontInfo
                       Pdf.Toolbox.Content.GlyphList
                       Pdf.Toolbox.Content.TexGlyphList
                       Pdf.Toolbox.Content.Encoding.WinAnsi
                       Pdf.Toolbox.Content.Encoding.MacRoman
  other-modules:       Prelude
                       Data.Either
  build-depends:       base >= 4.5 && < 4.8,
                       containers,
                       attoparsec >= 0.10,
                       bytestring,
                       base16-bytestring,
                       text,
                       io-streams,
                       pdf-toolbox-core ==0.1.0.*

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                       compat
  main-is:             test.hs
  other-modules:       Test.UnicodeCMap
                       Test.Parser
  build-depends:       base >= 4.5 && < 4.8,
                       containers,
                       bytestring,
                       attoparsec,
                       io-streams,
                       pdf-toolbox-content,
                       pdf-toolbox-core,
                       hspec
