name:                pdf-toolbox-core
version:             0.1.0
synopsis:            A collection of tools for processing PDF files.
license:             BSD3
license-file:        LICENSE
author:              Yuras Shumovich
maintainer:          Yuras Shumovich <shumovichy@gmail.com>
copyright:           Copyright (c) Yuras Shumovich 2012-2016
category:            PDF
build-type:          Simple
cabal-version:       >=1.8
homepage:            https://github.com/Yuras/pdf-toolbox
extra-source-files:  changelog.md
description:
  Low level tools for processing PDF files.
  .
  Level of abstraction: cross reference, trailer, indirect object, object
  .
  The API is based on random access input streams, and is designed to be memory efficient.
  We don't need to parse the entire PDF file and store it in memory when you need just one page or two.
  Usually it is also leads to time efficiency, but we don't try optimize performance
  by e.g. maintaining xref or object cache. Higher level layers should take care of it.
  .
  The library is low level. It may mean that you need to be familiar with PDF file internals to
  actually use it.

source-repository head
  type:                git
  location:            git://github.com/Yuras/pdf-toolbox.git

library
  hs-source-dirs:      lib
                       compat
  exposed-modules:     Pdf.Core
                       Pdf.Core.IO.Buffer
                       Pdf.Core.Exception
                       Pdf.Core.Name
                       Pdf.Core.Object
                       Pdf.Core.Object.Builder
                       Pdf.Core.Object.Util
                       Pdf.Core.Parsers.Object
                       Pdf.Core.Parsers.XRef
                       Pdf.Core.Parsers.Util
                       Pdf.Core.Stream
                       Pdf.Core.Stream.Filter.Type
                       Pdf.Core.Stream.Filter.FlateDecode
                       Pdf.Core.XRef
                       Pdf.Core.Util
                       Pdf.Core.Writer
  other-modules:       Prelude
                       Data.Either
  build-depends:       base >= 4.5 && < 5,
                       bytestring >= 0.10.4 && < 0.11,
                       base16-bytestring,
                       io-streams,
                       attoparsec >= 0.12,
                       scientific,
                       vector,
                       semigroups,
                       hashable,
                       unordered-containers,
                       transformers,
                       containers

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                       compat
  main-is:             test.hs
  other-modules:       Test.XRef
                       Test.Stream
                       Test.Parsers.Object
                       Test.Object.Builder
                       Test.Object.Util
                       Test.Name
                       Prelude
                       Data.Either
  build-depends:       base,
                       pdf-toolbox-core,
                       bytestring,
                       vector,
                       semigroups,
                       unordered-containers,
                       attoparsec,
                       io-streams,
                       hspec
