name:                pdf-toolbox-document
version:             0.0.4.0
synopsis:            A collection of tools for processing PDF files.
license:             BSD3
license-file:        LICENSE
author:              Yuras Shumovich
maintainer:          Yuras Shumovich <shumovichy@gmail.com>
copyright:           Copyright (c) Yuras Shumovich 2012-2014
category:            PDF
build-type:          Simple
cabal-version:       >=1.8
homepage:            https://github.com/Yuras/pdf-toolbox
extra-source-files:  changelog.md
description:
  Mid level tools for processing PDF files.
  .
  Level of abstraction: document, catalog, page

source-repository head
  type:                git
  location:            git://github.com/Yuras/pdf-toolbox.git

library
  hs-source-dirs:      lib
  exposed-modules:     Pdf.Toolbox.Document
                       Pdf.Toolbox.Document.Types
                       Pdf.Toolbox.Document.Monad
                       Pdf.Toolbox.Document.Pdf
                       Pdf.Toolbox.Document.Document
                       Pdf.Toolbox.Document.Info
                       Pdf.Toolbox.Document.Catalog
                       Pdf.Toolbox.Document.PageNode
                       Pdf.Toolbox.Document.Page
                       Pdf.Toolbox.Document.FontDict
                       Pdf.Toolbox.Document.Encryption
                       Pdf.Toolbox.Document.Internal.Types
                       Pdf.Toolbox.Document.Internal.Util
  build-depends:       base >= 4.6 && < 4.8,
                       transformers,
                       containers,
                       text,
                       bytestring,
                       io-streams,
                       cipher-rc4,
                       cryptohash,
                       pdf-toolbox-core >=0.0.2 && <0.0.4,
                       pdf-toolbox-content ==0.0.3.*

test-suite pdf-toolbox-document-test
  hs-source-dirs:      tests
  main-is:             PdfToolboxDocumentTest.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5,
                       hspec,
                       HUnit,
                       pdf-toolbox-document
