name:                pdf-toolbox-document
version:             0.1.0
synopsis:            A collection of tools for processing PDF files.
license:             BSD3
license-file:        LICENSE
author:              Yuras Shumovich
maintainer:          Yuras Shumovich <shumovichy@gmail.com>
copyright:           Copyright (c) Yuras Shumovich 2012-2016
category:            PDF
build-type:          Simple
cabal-version:       >=1.8
homepage:            https://github.com/Yuras/pdf-toolbox
extra-source-files:  changelog.md
description:
  Mid level tools for processing PDF files.
  .
  Level of abstraction: document, catalog, page

source-repository head
  type:                git
  location:            git://github.com/Yuras/pdf-toolbox.git

library
  hs-source-dirs:      lib
                       compat
  exposed-modules:     Pdf.Toolbox.Document
                       Pdf.Toolbox.Document.Types
                       Pdf.Toolbox.Document.File
                       Pdf.Toolbox.Document.Pdf
                       Pdf.Toolbox.Document.Document
                       Pdf.Toolbox.Document.Info
                       Pdf.Toolbox.Document.Catalog
                       Pdf.Toolbox.Document.PageNode
                       Pdf.Toolbox.Document.Page
                       Pdf.Toolbox.Document.FontDict
                       Pdf.Toolbox.Document.Encryption
                       Pdf.Toolbox.Document.Internal.Types
                       Pdf.Toolbox.Document.Internal.Util
  other-modules:       Prelude
  build-depends:       base >= 4.5 && < 5,
                       transformers,
                       containers,
                       text,
                       bytestring,
                       vector,
                       unordered-containers,
                       io-streams,
                       cipher-rc4,
                       cipher-aes,
                       cryptohash,
                       crypto-api,
                       pdf-toolbox-core ==0.1.0.*,
                       pdf-toolbox-content ==0.1.0.*

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base,
                       bytestring == 0.10.*,
                       directory,
                       unordered-containers,
                       io-streams,
                       hspec,
                       pdf-toolbox-core,
                       pdf-toolbox-document
