name:                pdf-toolbox-document
version:             0.1.3.1
synopsis:            A collection of tools for processing PDF files.
license:             BSD3
license-file:        LICENSE
author:              Yuras Shumovich
maintainer:          Yuras Shumovich <shumovichy@gmail.com>
copyright:           Copyright (c) Yuras Shumovich 2012-2016
category:            PDF
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/Yuras/pdf-toolbox
extra-source-files:  changelog.md
                     test/files/nested_xobject.pdf
                     test/files/indirect_font_desc_fields.pdf
description:
  Mid level tools for processing PDF files.
  .
  Level of abstraction: document, catalog, page

source-repository head
  type:                git
  location:            git://github.com/Yuras/pdf-toolbox.git

library
  hs-source-dirs:      lib
                       compat
  exposed-modules:     Pdf.Document
                       Pdf.Document.Types
                       Pdf.Document.Pdf
                       Pdf.Document.Document
                       Pdf.Document.Info
                       Pdf.Document.Catalog
                       Pdf.Document.PageNode
                       Pdf.Document.Page
                       Pdf.Document.FontDict
                       Pdf.Document.Internal.Types
                       Pdf.Document.Internal.Util
  other-modules:       Prelude
  build-depends:       base >= 4.9 && < 5,
                       containers,
                       text,
                       bytestring,
                       vector,
                       unordered-containers,
                       io-streams,
                       pdf-toolbox-core ==0.1.*,
                       pdf-toolbox-content ==0.1.*
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  other-modules:       Test.Internal.Util
  build-depends:       base,
                       directory,
                       unordered-containers,
                       io-streams,
                       hspec,
                       pdf-toolbox-core,
                       pdf-toolbox-document
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  default-language:    Haskell2010
