name:                pdf-toolbox-examples
version:             0.0.1.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yuras Shumovich
maintainer:          shumovichy@gmail.com
-- copyright:           
category:            PDF
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable unpack-and-decrypt-pdf-file
  main-is:             unpack-and-decrypt-pdf-file.hs
  other-modules:       Prelude
                       Data.Either
  hs-source-dirs:      .
                       compat
  build-depends:       base
                       , bytestring
                       , vector
                       , containers
                       , unordered-containers
                       , transformers
                       , io-streams
                       , pdf-toolbox-core
                       , pdf-toolbox-document
  default-language:    Haskell2010

executable create-simple-pdf-file
  main-is:             create-simple-pdf-file.hs
  other-modules:       Prelude
                       Data.Either
  hs-source-dirs:      .
                       compat
  build-depends:       base
                       , bytestring
                       , vector
                       , unordered-containers
                       , io-streams
                       , pdf-toolbox-core
  default-language:    Haskell2010

executable change-document-title.hs
  main-is:             change-document-title.hs
  other-modules:       Prelude
                       Data.Either
  hs-source-dirs:      .
                       compat
  build-depends:       base
                       , unordered-containers
                       , io-streams
                       , pdf-toolbox-core
                       , pdf-toolbox-document
  default-language:    Haskell2010

executable merge-pdf-files
  main-is:             merge-pdf-files.hs
  other-modules:       Prelude
                       Data.Either
  hs-source-dirs:      .
                       compat
  build-depends:       base
                       , bytestring
                       , vector
                       , transformers
                       , unordered-containers
                       , io-streams
                       , pdf-toolbox-core
                       , pdf-toolbox-document
  default-language:    Haskell2010
