name:                pdf-toolbox-viewer
version:             0.0.2.0
synopsis:            Simple pdf viewer
description:         Proof of concept, only for debuging
homepage:            https://github.com/Yuras/pdf-toolbox
license:             BSD3
license-file:        LICENSE
author:              Yuras Shumovich
maintainer:          shumovichy@gmail.com
copyright:           Copyright (c) Yuras Shumovich 2012-2013
category:            PDF
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.8

source-repository head
  type:                git
  location:            git://github.com/Yuras/pdf-toolbox.git

executable pdf-toolbox-viewer
  main-is:             viewer.hs
  build-depends:       base >= 4.6 && < 4.8,
                       bytestring,
                       text,
                       transformers,
                       containers,
                       process,
                       directory,
                       filepath,
                       random,
                       io-streams,
                       cairo,
                       gtk,
                       pdf-toolbox-document ==0.0.2.*,
                       pdf-toolbox-content ==0.0.2.*
