name:                pdf-toolbox-viewer
version:             0.1.0
synopsis:            Simple pdf viewer
description:         Proof of concept, only for debuging
homepage:            https://github.com/Yuras/pdf-toolbox
license:             BSD3
license-file:        LICENSE
author:              Yuras Shumovich
maintainer:          shumovichy@gmail.com
copyright:           Copyright (c) Yuras Shumovich 2012-2016
category:            PDF
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.8

source-repository head
  type:                git
  location:            git://github.com/Yuras/pdf-toolbox.git

executable pdf-toolbox-viewer
  main-is:             viewer.hs
  other-modules:       Prelude
  hs-source-dirs:      .
                       compat
  build-depends:       base >= 4.5 && < 5,
                       text,
                       process,
                       directory,
                       filepath,
                       random,
                       cairo,
                       gtk,
                       pdf-toolbox-document ==0.1.*,
                       pdf-toolbox-content ==0.1.*
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
